--- a/table.html
+++ b/table.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
-     <!-- table 1 -->
+  </head>
+  <body>
+    <!-- table 1 -->
     <!-- <table border="1px solid black">
         <thead>
             <th>Student id</th>
@@ -42,12 +41,11 @@
               
             </tr>
         </tbody>
-        <tfoot></tfoot> -->
+        <tfoot></tfoot>
+     </table> -->
+    <!-- table 2 -->
 
-<!-- table 2 -->
-
-
-<table border=" 1px solid black">
+    <!-- <table border=" 1px solid black">
     <thead>
         <th>Column1</th>
         <th>Column2</th>
@@ -69,10 +67,92 @@
         </tr>
     </tbody>
     <tfoot></tfoot>
-</table>
+</table> -->
 
-
-
+    <!-- table 3 -->
+    <table border="1px solid black">
+      <thead>
+        <th>Country</th>
+        <th>State</th>
+        <th>City</th>
+        <th>Street</th>
+        <th>Male</th>
+        <th>Female</th>
+        <th>Others</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td rowspan="8">1</td>
+          <td rowspan="4">Kerla</td>
+          <td rowspan="2">Cochin</td>
+          <td>New street</td>
+          <td>500</td>
+          <td>600</td>
+          <td>6</td>
+        </tr>
+        <tr>
+          <td>main street</td>
+          <td>322</td>
+          <td>232</td>
+          <td>4</td>
+        </tr>
+        <tr>
+            <td rowspan="2">trivendram</td>
+          <td>guru street</td>
+          <td>232</td>
+          <td>232</td>
+          <td>6</td>
+        </tr>
+        <tr>
+          <td>tvk street</td>
+          <td>323</td>
+          <td>5453</td>
+          <td>4</td>
+        </tr>
+        <tr>
+            <td rowspan="4">Maharastra</td>
+            <td rowspan="2">Mumbai</td>
+            <td>krisha street</td>
+            <td>322</td>
+            <td>676</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td>man street</td>
+            <td>756</td>
+            <td>8670</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td rowspan="2">surat</td>
+            <td>new street</td>
+            <td>857</td>
+            <td>079</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td>bila street</td>
+            <td>505</td>
+            <td>968</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td rowspan="2" >2</td>
+            <td rowspan="2">alaska</td>
+            <td rowspan="2">aka central</td>
+            <td> new street</td>
+            <td>857</td>
+            <td>867</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>cross street</td>
+            <td>9577</td>
+            <td>857</td>
+            <td>8</td>
+        </tr>
+      </tbody>
+      <tfoot></tfoot>
     </table>
-</body>
+  </body>
 </html>
