--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
       <input type="date" name"date" value="date" id="date" placeholder="date"/>
       <br/>
       <br/>
-      <label id="selector">Select Option :</label>
+      <label for="selector">Select Option :</label>
       <select name="dishes" id="selector">
         <option value="maggie">Maggie</option>
         <option value="Kurkure">Kurkure</option>
@@ -70,3 +70,4 @@
     </form>
   </body>
 </html>
+
