--- a/complex_form.html
+++ b/complex_form.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    
+    <style>
+      .container{
+        display: flex;
+        justify-content: flex-end;
+    }
+      ul{
+        list-style-type: none;
+        display: flex;
+      }
+      li{
+        margin-right: 10px;
+      }
+    </style>
   </head>
   <body>
+    <div class="container">
+      <nav>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About us</a></li>
+          <li><a href="">Contact us</a></li>
+          <li><a href="">Visit</a></li>
+          <li><a href="tel:654746464">Call Me</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <!-- <form>
         <fieldset>
             <legend>Event Registration</legend>
@@ -115,5 +141,8 @@
         <!-- <button>Submit</button> -->
       </fieldset>
     </form>
+
+
+
   </body>
 </html>
