--- a/table.html
+++ b/table.html
@@ -70,7 +70,7 @@
 </table> -->
 
     <!-- table 3 -->
-    <table border="1px solid black">
+    <!-- <table border="1px solid black">
       <thead>
         <th>Country</th>
         <th>State</th>
@@ -97,7 +97,7 @@
           <td>4</td>
         </tr>
         <tr>
-            <td rowspan="2">trivendram</td>
+          <td rowspan="2">trivendram</td>
           <td>guru street</td>
           <td>232</td>
           <td>232</td>
@@ -110,49 +110,94 @@
           <td>4</td>
         </tr>
         <tr>
-            <td rowspan="4">Maharastra</td>
-            <td rowspan="2">Mumbai</td>
-            <td>krisha street</td>
-            <td>322</td>
-            <td>676</td>
-            <td>7</td>
+          <td rowspan="4">Maharastra</td>
+          <td rowspan="2">Mumbai</td>
+          <td>krisha street</td>
+          <td>322</td>
+          <td>676</td>
+          <td>7</td>
         </tr>
         <tr>
-            <td>man street</td>
-            <td>756</td>
-            <td>8670</td>
-            <td>9</td>
+          <td>man street</td>
+          <td>756</td>
+          <td>8670</td>
+          <td>9</td>
         </tr>
         <tr>
-            <td rowspan="2">surat</td>
-            <td>new street</td>
-            <td>857</td>
-            <td>079</td>
-            <td>9</td>
+          <td rowspan="2">surat</td>
+          <td>new street</td>
+          <td>857</td>
+          <td>079</td>
+          <td>9</td>
         </tr>
         <tr>
-            <td>bila street</td>
-            <td>505</td>
-            <td>968</td>
-            <td>6</td>
+          <td>bila street</td>
+          <td>505</td>
+          <td>968</td>
+          <td>6</td>
         </tr>
         <tr>
-            <td rowspan="2" >2</td>
-            <td rowspan="2">alaska</td>
-            <td rowspan="2">aka central</td>
-            <td> new street</td>
-            <td>857</td>
-            <td>867</td>
-            <td>0</td>
+          <td rowspan="2">2</td>
+          <td rowspan="2">alaska</td>
+          <td rowspan="2">aka central</td>
+          <td>new street</td>
+          <td>857</td>
+          <td>867</td>
+          <td>0</td>
         </tr>
         <tr>
-            <td>cross street</td>
-            <td>9577</td>
-            <td>857</td>
-            <td>8</td>
+          <td>cross street</td>
+          <td>9577</td>
+          <td>857</td>
+          <td>8</td>
         </tr>
       </tbody>
       <tfoot></tfoot>
+    </table> -->
+
+   <!-- table 4 -->
+
+    <table border="1px solid red">
+      <thead>
+        <th>No.</th>
+        <th>full Name</th>
+        <th>position</th>
+        <th>salary</th>
+        <th>Type</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Gaurav Kumar</td>
+          <td>React native</td>
+          <td>15000</td>
+          <td rowspan="4">Company Founder</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Harsh Khera</td>
+          <td>React native</td>
+          <td>15000</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Anil Kumar</td>
+          <td>Data Scientist</td>
+          <td>15000</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Satyendra Kumar</td>
+          <td>Ruby on rails Developer</td>
+          <td>50000</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td style="text-align: center" colspan="3">Total Expence :</td>
+          <td>500000</td>
+        </tr>
+      </tfoot>
     </table>
   </body>
 </html>
